# education

./: .gitignore  DockerInfo.txt  rabbitMQ.txt  tech.txt  toRead.txt
.github/workflows/: master-pipeline.yml
aws/: info.txt
aws/ fileSaver/backend/: .golangci.yml  Dockerfile  go.mod  main.go
cloudNative/plugin/duck/: duck.go
cloudNative/plugin/frog/: frog.go
cloudNative/plugin/main/: main.go
education-kafka-connector/: info.txt  mysql.cnf
embedded/assembly/: getInput.asm  printNumber.asm  printString.asm  writingFile.asm
embedded/c/: electronics.txt
embedded/c/udemy/.metadata/: .log4j2.xml  version.ini
embedded/c/udemy/MCU1_CLion/: .cproject  .cproject.bak  (+6 more)
embedded/discovery-probe-rs/: Cargo.toml  helps.rtf
embedded/discovery-probe-rs/src/: main.rs
gRPC/firstLook/: go.mod  index.go  keyValue.proto
gRPC/firstLook/gRPCtemplate/: keyValue.pb.go  keyValue_grpc.pb.go
info/: KafkaInfo.txt  cloudNative.txt  kuberInfo.txt  mongoDB.txt  postgresSQL_info.txt  system-design.txt
kuber/: deployment.yml  mongo-express.yml  mongo.yml  nginx.pod.yml  persistentVolume.yml  simple.service.yml  storageClass.yml  usingConfigMap.yml  volume.example.yml
patterns/cloudPatters/circuitBreaker/: index.go  info.txt
patterns/cloudPatters/debounce/: index.go  info.txt
patterns/cloudPatters/retry/: index.go  info.txt
patterns/cloudPatters/throttle/: index.go  info.txt
patterns/cloudPatters/timeout/: index.go  info.txt
patterns/designPatterns/: abstractFactory.go  bridge.go  command.go  decorator.go  factoryMethod.go  main.go  observer.go  proxy.go  state.go
(+205 files in other folders)
